--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
